Updated Web App to v2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="titlebar">
-        <h1><strong>Executing v2 on AWS Fargate. Courtesy of Code Suite!</strong></h1>
+        <h1><strong>Executing v2 on AWS Fargate. Courtesy of Code Suite!!</strong></h1>
 	<h1><strong>Executing v1 on AWS Fargate</strong></h1>
 
     </div>
